# openpower-dbus-interfaces

./: Makefile.am  configure.ac  generate_makefile.sh  generate_yaml_makefile.sh  openpower-dbus-interfaces.pc.in
org/open_power/Control/: Host.interface.yaml
org/open_power/Error/Host/: Event.metadata.yaml
org/open_power/Host/: Access.metadata.yaml  Event.metadata.yaml
org/open_power/Logging/: EselToPel.interface.yaml
org/open_power/OCC/: Status.interface.yaml
xyz/openbmc_project/Common/FactoryReset/: README.md
